# rag_llm_chaining

./: .env.example  .gitignore  CLAUDE.md  README.md  WORKLOG.md  pyproject.toml
config/: model_config.yaml  vector_config.yaml
data/: test_dataset.json  test_dataset_case_specific.json  test_dataset_case_specific_200.json
data/evaluation_200/: evaluation_results_20251208_193120.json  evaluation_summary_20251208_193120.json
data/evaluation_case_specific/: evaluation_results_20251208_160626.json  evaluation_summary_20251208_160626.json
data/evaluation_ollama/: ollama_eval_20251208_223156.json  ollama_eval_20251208_225047.json  ollama_summary_20251208_223156.json  ollama_summary_20251208_225047.json
data/evaluation_results/: evaluation_results_20251208_142213.json  evaluation_results_20251208_154635.json  evaluation_summary_20251208_142213.json  evaluation_summary_20251208_154635.json
docs/: EVALUATION_REPORT.md  EVALUATION_REPORT_OLLAMA.md  LARGE_FILES.md  evaluation_report_200.md  evaluation_report_solar.md
models/qwen2.5-14b/: model-00001-of-00008.safetensors.aria2  model-00002-of-00008.safetensors.aria2
models/solar-10.7b/: README.md  generation_config.json  model.safetensors.index.json  tokenizer_config.json
scripts/: build_vectordb.py  build_vectordb_parallel.py  download_model.py  evaluate_ollama_rag.py  evaluate_rag_vs_llm.py  generate_test_dataset.py  test_model.py  test_rag_pipeline.py
src/data/: loader.py
src/embedding/: vectordb.py
src/rag/: pipeline.py
